[project]
name = "onyx-tts"
version = "1.0.0"
description = "High-performance multilingual text-to-speech system by 0N Labs"
readme = "README.md"
authors = [
    { name = "0N Labs", email = "contact@0nlabs.ai" },
]
requires-python = ">=3.10,<3.14"
dependencies = [
    "onnxruntime>=1.20.1",
    "colorlog>=6.9.0",
    "espeakng-loader>=0.2.4",
    "phonemizer-fork>=3.3.2",
    "numpy>=2.0.2",
]

[project.urls]
Homepage = "https://github.com/0N-Labs/onyx-tts"
Repository = "https://github.com/0N-Labs/onyx-tts"
Issues = "https://github.com/0N-Labs/onyx-tts/issues"


[project.optional-dependencies]
# Windows/Linux GPU feature
# Install with onyx-tts[gpu]
gpu = [
    # onnxruntime-gpu is not available on Linux ARM or macOS
    "onnxruntime-gpu>=1.20.1; platform_machine == 'x86_64' and sys_platform != 'darwin'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["ruff>=0.11.0", "sounddevice>=0.5.1", "soundfile>=0.13.0"]

[tool.ruff]
required-version = ">=0.9.0"
output-format = "concise"
show-fixes = true

[tool.ruff.lint]
extend-select = ["I", "UP"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false
